--- a/日程/2021/9月份工作记录.md
+++ b/日程/2021/9月份工作记录.md
@@ -7,3 +7,12 @@
 明天把sql写出来；把前端做好，增删改查、条件搜索这些。
 有时间的话，把后端统计的框架写出来。
 后天测一测。
+
+### 9-9：
+1、该干的都没干
+2、接口计算有个bug，没有对访问ES异常的情况做处理，给加上了
+3、告警接收改了路由架构。
+1. main只有接口，具体接口的处理提取成单独文件，方便定义返回码
+2. 增加推送falcon的逻辑
+
+4、接口部分，把表的名字都改小写了。线上都是小写，且mysql不区分大小写。但是测试环境区分，改成统一的了。明天makemigration，一定有问题，大小写这部分要跳过，恐怕得一步一步自己执行了
