设计和这两天的工作

--- a/日程/2021/9月份工作记录.md
+++ b/日程/2021/9月份工作记录.md
@@ -1,3 +1,7 @@
+### 王宁的统计body_size的需求
+查询语句
+{"size":0,"query":{"bool":{"must":[{"match_phrase":{"api.keyword":{"query":"/api/sideBar"}}},{"range":{"timestamp":{"gte":1629884100000,"lte":1629884700000,"format":"epoch_millis"}}},{"match_phrase":{"statuscode":{"query":200}}}]}},"aggs":{"result":{"date_histogram":{"field":"timestamp","interval":"10s","time_zone":"Asia/Shanghai","min_doc_count":0},"aggs":{"need_value":{"range":{"field":"body_bytes_sent","ranges":[{"from":0,"to":400}],"keyed":true}}}}}}
+
 ### 9-8:
 1、上个月做的告警接受组件，因为上线后使用线上kafka出现严重丢数据问题。消费者大概率不消费消息。把kafka部分去掉了，改为直接转发。
 本来还想搞个redis做缓冲，有点麻烦。暂时不做了。
@@ -16,3 +20,29 @@
 2. 增加推送falcon的逻辑
 
 4、接口部分，把表的名字都改小写了。线上都是小写，且mysql不区分大小写。但是测试环境区分，改成统一的了。明天makemigration，一定有问题，大小写这部分要跳过，恐怕得一步一步自己执行了
+
+### 9-10：
+1、数据库字段加好了
+2、前端搜索优化。搜索可选条件更多，并把搜索框改为弹出。
+3、前端该增加的字段跟着数据库字段增加也做好了
+
+### 9-13：
+1、api_calculate把计算逻辑做出来
+2、计算逻辑没有做，光写设计了。还有很多问题没有想好
+
+### 9-14：
+1、王宁统计bodysize分布的功能做完了，明天再跑看看，确实有问题。且逻辑混乱，需要重新调整
+
+### 9-15：
+1、改颜文的bug
+ES表里面有的url是错的；有的在采集的时候就没有采集到；接口过滤的正则范围太大，把一些业务请求也给过滤掉了
+2、把王宁要的bodysize统计功能重新整理了一下，有些地方是按照离线计算写的，实际是按照实时计算写的，全统一成实时计算。当然也可以搞成离线，看情况吧
+3、明天要把fmp的前端和对应的后端搞好，特别是数据库的部分。
+4、明天最好拉着王鹏把设计过了，不然不踏实
+
+### 9-16：
+1、把api_calculate的数据对了一遍，基本准确。这个就算结束了
+2、和王鹏把clickhouse的设计对完
+3、clickhouse查询语句写好，测完
+4、clickhouse前端数据库model写好，明天弄上，填好数据。就可以开发前端了
+5、明天要把前端搞完，照着es的做，应该很快
