--- a/日程/2021/9月份工作记录.md
+++ b/日程/2021/9月份工作记录.md
@@ -46,3 +46,56 @@ ES表里面有的url是错的；有的在采集的时候就没有采集到；接
 3、clickhouse查询语句写好，测完
 4、clickhouse前端数据库model写好，明天弄上，填好数据。就可以开发前端了
 5、明天要把前端搞完，照着es的做，应该很快
+
+### 9-17：
+1、简单看了下api_calculate的数，基本正确
+2、fmp上后端数据库和增删改查做完
+3、前端把机房、click house表相关的都做完
+4、接口把接口的编辑和搜索页做完。
+5、下午去机房帮财务盘点去了
+6、明天把接口列表页做完
+7、还有历史记录页，小流量接口页，这两个简单点
+
+### 9-18
+1、忘了干啥了。反正是接口计算那部分
+2、应该是按namespace统计做完了
+
+### 9-22：
+1、个人发展规划表
+2、接口计算基本完成
+3、明天把域名表完善一下，计算就完成了。接着可以算一次，把历史记录、小流量表做完
+
+### 9-23
+1、新做了个关键业务配置页面，用来单独设置务必统计的业务
+2、后台统计新增接口的逻辑做了一半
+3、明天用今天做的接口把需要的信息拉下来，然后继续写逻辑
+
+### 9-24
+1、上午去办房产证
+2、fmp调整model，去掉了机房的外键关系，没有用
+3、fmp增加小流量接口的增删改查搜
+4、计算部分改到get_interfaces最后6行了。
+
+### 9-25
+1、值班
+2、统计需要做删除接口
+明天要验证一下，delete怎么实现，印象是知道id直接删除。目前不知道id，只能通过条件过滤，然后删除
+
+### 9-26
+1、后台刷新接口信息，已完成
+2、做了一点流量统计
+3、明天把流量统计做完，就开始测试
+
+### 9-27
+1、开始测试
+2、fmp前后端已经上线，还是有bug。还行，没有出现逻辑问题，就是有些字段应该删掉，漏删了。非设计问题
+3、计算部分，判定是否小流量接口的地方，还没有完成。需要搞完。但不影响结果，还是有逻辑错误
+
+### 9-28
+1、开始测试，数据更新基本完成。明天把restful接口配一下，就可以开始走全量
+2、前端需要把翻页做一下，接口页的翻页
+INSERT INTO ckh_allapi (create_time, update_time, memo, `status`, api, restime_low, restime_middle, restime_high, bodysize_flag, body_small, body_large, `fixed`, restful_flag, smallflow_flag, last_collect_time, ckh_table_id) VALUES (NOW(), NOW(),"",0,"apiii",0.5,1,5,0,400,20000,1,1,0,0,"aaaa")
+
+### 9-30
+1、统计全部做完，开始稳定性测试
+2、body_size计算，只能算1个小时的，不对劲
