--- a/git/常用命令.md
+++ b/git/常用命令.md
@@ -25,3 +25,6 @@ git push origin :refs/tags/<font color="red">v20190514</font>
 
 ##### 5、新建一个没有提交记录的分支
 git checkout --orphan <font color="red">source</font>
+
+##### 6、有时候会出现汉字显示乱码
+git config core.quotepath false
