--- a/日程/2021/10月份工作记录.md
+++ b/日程/2021/10月份工作记录.md
@@ -44,3 +44,38 @@ agent增加log, 配置文件增加个开关, 把基础监控关掉
 ### 10-12
 1、基础业务去O版本，用户包版本升级——一整天
 2、调试多线程
+
+### 10-13
+1、基础业务升级，继续。基本完成。明天切流量
+2、多线程。发现是socket提前关闭，导致后续用到这个socket的时候，它已经不存在了。
+具体啥意思不知道。。。
+
+### 10-14
+1、基础业务升级6.6.6.4
+2、用户包工具包2个
+3、多线程还是有问题
+
+### 10-17
+值班
+
+### 10-18
+1、realtime迁移fmp
+2、上午去打疫苗
+
+### 10-19
+1、继续realtime迁移
+2、web页改、查已完成
+3、明天把新增页做好
+4、再把go的部分增加从fmp获取数据做好。还要改造定时任务，变成通过crontab控制执行时间。告警挪到夜莺上
+
+### 10-20
+1、realtime迁移fmp已上线。目前问题是阿里云的机器无法访问IDC，导致无法更新配置文件
+昨天计划的变动，不做了。就单纯的重新生成配置文件
+2、明天要跟闫野对一下华为云监控具体的工作内容；看下同环比的逻辑，不用李钟麟了，恐怕会很麻烦。
+
+### 10-21
+1、看了一下同环比的脚本
+修改了接口统计的逻辑，增加补0逻辑。但是api的部分依然没有补0。因为api这个逻辑，从clickhouse拿到数据的时候是个多元素列表，不确定能拿回来多少条数据——即domain的数量不定。
+2、开始华为云的对接
+基本逻辑和阿里云相同，可见华为云就是抄啊。
+3、明天先在本地写个demo看看，然后再往cmdb的代码里面合
