--- a/git/常用命令.md
+++ b/git/常用命令.md
@@ -28,3 +28,5 @@ git checkout --orphan <font color="red">source</font>
 
 ##### 6、有时候会出现汉字显示乱码
 git config core.quotepath false
+
+##### 7、将本地内容和远端绑定
