--- a/git/常用命令.md
+++ b/git/常用命令.md
@@ -30,3 +30,11 @@ git checkout --orphan <font color="red">source</font>
 git config core.quotepath false
 
 ##### 7、将本地内容和远端绑定
+```
+git remote add origin ssh://git@git-ops.hismarttv.com:3333/fenggengping/aaa.git
+git push -u origin master
+```
+这样就把本地和远端连起来了，不过第一次要拉一下，把远端和本地的commit统一起来
+
+#### 8、git rebase和git merge
+就是这么用的。如果管理规范的话，都一样。
