--- a/日程/2021/11月工作记录.md
+++ b/日程/2021/11月工作记录.md
@@ -29,3 +29,7 @@
 
 ### 11-5:
 1. 阿里云的ckh是正常的，只是因为没有数据，所以看起来不对劲。已经增加日志打印，如果没有数据，debug日志中会打印
+
+### 11-8:
+1. falcon-agent的逻辑弄清楚了。已经加上配置文件，今天顺利的话，就算结束——结束，改的没问题
+2. 明天加log，rpc的已经加好。http的没有找到，太他妈精简了
