--- a/日程/2021/11月工作记录.md
+++ b/日程/2021/11月工作记录.md
@@ -1,35 +1,66 @@
 ## 监控系统产品化能力提升:
-2. falcon agent增加log 记录详细http请求 11.10 @冯庚平
-3. falcon agent增加开关, 关闭基础监控 11.10 @冯庚平
-4. 梳理falcon agent http 上报数据, 对接业务更改上报接口 11.30 @冯庚平
-5. 梳理falcon 业务邮件组与策略, 在夜莺进行配置 11.30 @闫野 冯庚平
-7. 完成腾讯云基础监控、服务监控、容器云监控部署与告警配置  11.30 @闫野 @冯庚平
-8. 完成华为云服务监控、容器云监控部署与告警配置  11.30 @闫野 @冯庚平
-9. 完成接口监控公有云采集适配与开发 11.26 @冯庚平
-10. 梳理realtime 新接口, 各业务运维配合刷新接口验证配置 11.19 @冯庚平
-11. Paas监控支持
-    1) Paas 监控对接支持 11.30  @闫野 @冯庚平
 
+2. ~~falcon agent 增加 log 记录详细 http 请求 11.10 @冯庚平——完成~~
+3. ~~falcon agent 增加开关, 关闭基础监控 11.10 @冯庚平——完成~~
+4. 梳理 falcon agent http 上报数据, 对接业务更改上报接口 11.30 @冯庚平
+5. 梳理 falcon 业务邮件组与策略, 在夜莺进行配置 11.30 @闫野 冯庚平
+6. ~~完成腾讯云基础监控、服务监控、容器云监控部署与告警配置 11.30 @闫野 @冯庚平~~
+7. ~~完成华为云服务监控、容器云监控部署与告警配置 11.30 @闫野 @冯庚平~~
+8. ~~完成接口监控公有云采集适配与开发 11.26 @冯庚平~~
+9. 梳理 realtime 新接口, 各业务运维配合刷新接口验证配置 11.19 @冯庚平
+   对比接口配置页和 realtime 接口，找出前一百，发给王鹏定一下。排除 realtime 已有
+10. Paas 监控支持
+    1. Paas 监控对接支持 11.30 @闫野 @冯庚平
 
 ### 11-1:
-1. realtime切换到新的版本，明天把旧的都停掉
-2. 看了下falcon agent的逻辑，应该是把中间有一行注释掉就可以了，明天编译一版测测
-3. 明天看着张斌把dns去掉，就那两个ovp的域名解析
+
+1. realtime 切换到新的版本，明天把旧的都停掉
+2. 看了下 falcon agent 的逻辑，应该是把中间有一行注释掉就可以了，明天编译一版测测
+3. 明天看着张斌把 dns 去掉，就那两个 ovp 的域名解析
 
 ### 11-3:
+
 1. 今天把接口监控的文档写完了
 2. 在阿里云上把接口统计部署好
-3. 同环比有bug，改好了
-4. 现在阿里云上报数据还不全，只有namespace的数据上来了
-5. 阿里云的clickhouse访问，可能有问题，报错突然就没有了。一是缺参数，二是缺表
+3. 同环比有 bug，改好了
+4. 现在阿里云上报数据还不全，只有 namespace 的数据上来了
+5. 阿里云的 clickhouse 访问，可能有问题，报错突然就没有了。一是缺参数，二是缺表
 
 ### 11-4:
-1. 把阿里云realtime多活版本正式用起来了。
-2. 明天继续搞ckh
+
+1. 把阿里云 realtime 多活版本正式用起来了。
+2. 明天继续搞 ckh
 
 ### 11-5:
-1. 阿里云的ckh是正常的，只是因为没有数据，所以看起来不对劲。已经增加日志打印，如果没有数据，debug日志中会打印
+
+1. 阿里云的 ckh 是正常的，只是因为没有数据，所以看起来不对劲。已经增加日志打印，如果没有数据，debug 日志中会打印
 
 ### 11-8:
-1. falcon-agent的逻辑弄清楚了。已经加上配置文件，今天顺利的话，就算结束——结束，改的没问题
-2. 明天加log，rpc的已经加好。http的没有找到，太他妈精简了
+
+1. falcon-agent 的逻辑弄清楚了。已经加上配置文件，今天顺利的话，就算结束——结束，改的没问题
+2. 明天加 log，rpc 的已经加好。http 的没有找到，太他妈精简了
+
+### 11-9:
+
+1. http 的逻辑找到了，go 只要在同一个目录就可以不专门引用。agent 已经改好
+   并且上线了几个 node，明天看看日志量
+2. realtime 接口统计，弄完了
+
+### 11-10:
+
+1. realtime 接口监控对比弄出来了。明天跟闫野对一下
+2. falcon 发告警，之前配的几台机器也统计出来了。明天对一下
+
+### 11-11:
+
+1. realtime 接口要重新搞，全库扫描把所有接口都弄出来。然后弄好给业务选择。<br>
+   同时还要做成自动化脚本，周期扫描<br>
+   在扫描 clickhouse 的时候，发现 post 请求如果带 param，则 clickhouse 中 param 参数就填这个；如果不带，则把 body 填到 param 里面。这只能把 post 过滤掉了，如果能弄好，post 也能监控起来
+2. falcon 中开发发的告警，已经写好脚本，后续可复用。注意这个脚本只能解析一条。如果一次发多条就玩蛋
+3. 明天可以找一个业务试着改改
+4. realtime 的对比完成，明天早上看下结果。顺利的话，直接就弄个新表，然后写进去。把前端搞出来，让业务自己改
+
+### 11-12
+
+1. realtime 比较，前后端都做完了，脚本也写好了，在测试，下周搞出来，让业务调
+2. 指导业务修改 grafana 数据源，都弄成 opentsdb
