--- a/Python/字符集问题.md
+++ b/Python/字符集问题.md
@@ -1,7 +1,10 @@
-### 字符集问题
-python3把字符串的处理统一成unicode了，str类型就不再有*.decode()这个函数。但是日常还是能碰到python2的一些字符，例如/x22这种，反斜线+x+数字。<br>
+# 字符集问题
+
+python3把字符串的处理统一成unicode了，str类型就不再有*.decode()这个函数。但是日常还是能碰到python2的一些字符，例如/x22这种，反斜线+x+数字。</br>
 统一方法：
-```
+
+```python
 *.encode('raw_unicode_escape').decode()
 ```
+
 搞定
