--- a/日程/2021/11月工作记录.md
+++ b/日程/2021/11月工作记录.md
@@ -51,7 +51,7 @@
 1. realtime 接口监控对比弄出来了。明天跟闫野对一下
 2. falcon 发告警，之前配的几台机器也统计出来了。明天对一下
 
-### 11-11:
+### 11-11
 
 1. realtime 接口要重新搞，全库扫描把所有接口都弄出来。然后弄好给业务选择。<br>
    同时还要做成自动化脚本，周期扫描<br>
@@ -64,3 +64,21 @@
 
 1. realtime 比较，前后端都做完了，脚本也写好了，在测试，下周搞出来，让业务调
 2. 指导业务修改 grafana 数据源，都弄成 opentsdb
+
+### 11-16
+
+1. realtime 数据都写进去了。明天改下 model，增加 delete 接口，后续再有新接口，只要业务删除，把 delete 置为 1，create 就不再新增了。
+2. realtime 改了个 bug，增加两个配置项，保证多活时数据不会冲突
+3. 把 agent 的日志都集中了，发现日志格式不友好，不方便统计，有时间就改改。方便后续自动化
+4. 指导业务的人改 grafana
+
+### 11-17
+
+1. realtime 发出去了，等业务的人改好，再把数据导回去
+2. agent 还没有开始整理
+3. falcon 邮件组也没有开始
+
+### 11-18
+
+1. 同环比搞好了。非常费劲
+2. 明天检查业务的，主要问题就是不少接口原来就没配，现在阿里云也没有配上。明天主要时间肯定是配置阿里云的部分
