工作记录，go-gin开启多端口监听

--- a/日程/2021/11月工作记录.md
+++ b/日程/2021/11月工作记录.md
@@ -82,3 +82,12 @@
 
 1. 同环比搞好了。非常费劲
 2. 明天检查业务的，主要问题就是不少接口原来就没配，现在阿里云也没有配上。明天主要时间肯定是配置阿里云的部分
+
+### 11-19、22-24
+
+1. 收拾日报面板，挨个检查业务的人是否都改好
+
+### 11-25
+
+1. 告警接收服务开启多端口，方便开发对接；增加白名单开关，暂时不限制开发的 endpoint
+2. realtime 改为按组上报数据，减轻 transfer 压力
