12-2 TDengine的学习记录

--- a/日程/2021/11月工作记录.md
+++ b/日程/2021/11月工作记录.md
@@ -91,3 +91,23 @@
 
 1. 告警接收服务开启多端口，方便开发对接；增加白名单开关，暂时不限制开发的 endpoint
 2. realtime 改为按组上报数据，减轻 transfer 压力
+
+### 11-26
+
+1. 上午在家没上班，昨晚去医院了。
+2. 把 realtime 汇总整理一下，再发出去让业务的人重新改
+3. 2 点开例会
+4. realtime 的说明文档写完、上传
+
+### 11-29
+
+1. fmp 前后端改造，增加忽略状态
+2. realtime 汇总整理，并注入数据库
+3. realtime 代码 bug，httpclient 被复用了，这不行
+4. realtime 没有改出来。。。。
+
+### 11-30
+
+1. 一天都在调 realtime。最终搞好了，关键点是 http 的超市时间设置的 5 秒，太短了。在带宽不够的情况下，5 秒传不了那么多数据（存疑，我再具体算算传了多大数据）
+2. realtime 稳定性测试，发现数据不对，原本是不到 1000 个接口，现在已经超过 2000 了。maxapinum 这个参数就得设置成 10000，但是设置成 10000，出现空指针。
+   这个地方不对，maxapinum 仅对告警和发送队列生效，接口参数和这个无关。明天要仔细看看这个参数的关系
