--- a/日程/2021/12月工作记录.md
+++ b/日程/2021/12月工作记录.md
@@ -8,3 +8,10 @@
 6. 持续优化夜莺告警组与告警策略 12.30 @闫野 @冯庚平
 7. realtime 发送系统增加批量发送 12.5 @冯庚平
 8. 完成腾讯云基础监控、服务监控、容器云监控部署与告警配置 12.15 @闫野 @冯庚平
+
+### 12-3
+
+1. 解决了 realtime 空指针的问题。
+   最大接口数，原本设置的 1000，自动扫描后，变成 2500。改配置的时候，有个地方没有改
+2. 把所有业务的配置导入进去，盯着他们改好
+3. TDengine 预研
