--- a/第三方开源组件/TDengine/初读.md
+++ b/第三方开源组件/TDengine/初读.md
@@ -5,7 +5,7 @@
 ### 1、超级表(STable)和普通表
 
 超级表是指某一特定类型的数据采集点的集合。同一类型的数据采集点，其表的结构是完全一样的，但每个表（数据采集点）的静态属性（标签）是不一样的。描述一个超级表（某一特定类型的数据采集点的集合），除需要定义采集量的表结构之外，还需要定义其标签的 schema，标签的数据类型可以是整数、浮点数、字符串，标签可以有多个，可以事后增加、删除或修改。如果整个系统有 N 个不同类型的数据采集点，就需要建立 N 个超级表。
-在 TDengine 的设计里，<font color=red}>表用来代表一个具体的数据采集点，超级表用来代表一组相同类型的数据采集点集合。</font>当为某个具体数据采集点创建表时，用户使用超级表的定义做模板，同时指定该具体采集点（表）的标签值。与传统的关系型数据库相比，表（一个数据采集点）是带有静态标签的，而且这些标签可以事后增加、删除、修改。<font color=red>一张超级表包含有多张表，这些表具有相同的时序数据 schema，但带有不同的标签值。</font>
+在 TDengine 的设计里，<font color=red>表用来代表一个具体的数据采集点，超级表用来代表一组相同类型的数据采集点集合。</font>当为某个具体数据采集点创建表时，用户使用超级表的定义做模板，同时指定该具体采集点（表）的标签值。与传统的关系型数据库相比，表（一个数据采集点）是带有静态标签的，而且这些标签可以事后增加、删除、修改。<font color=red>一张超级表包含有多张表，这些表具有相同的时序数据 schema，但带有不同的标签值。</font>
 
 超级表的数据是其各个子表的集合。数据插入仅在子表进行。
 
