--- a/第三方开源组件/TDengine/初读.md
+++ b/第三方开源组件/TDengine/初读.md
@@ -69,3 +69,17 @@ CREATE TABLE d1001 USING meters TAGS ("Beijing.Chaoyang", 2);
 
 有现成的部署脚本，本身极为轻量，安装很快。
 第一个节点一路回车就行
+
+## 三、配置
+
+再说
+
+## 四、账号密码
+
+一开始的时候，账号密码实际上是没有的。文档里面说是 root/taosdata，但不输入账号密码一样能操作。当你修改了密码，再进入就会提示无权限。修改方法如下：
+
+```sql
+alter user root pass 'hitv';
+```
+
+这里注意密码要用单引号引起来。
