--- a/git/常用命令.md
+++ b/git/常用命令.md
@@ -1,40 +1,85 @@
 ### 常用命令
+
 ##### 1、强制同步远程数据，放弃本地内容
+
 ```
 git fetch --all //只是下载代码到本地，不进行合并操作
 git reset --hard origin/master  //把HEAD指向最新下载的版本
 ```
 
 ##### 2、删除远端分支
+
 git push origin --delete <font color="red">分支名</font>
 
 ##### 3、删除本地分支
+
 git branch –D <font color="red">分支名</font>
 
-
 ##### 4、打标签
-git tag -a <font color="red">v1.4 MD5ID</font> -m "<font color="red">my version 1.4"</font>
-git push origin v1.5 推送指定tag
-git push origin --tags 推送所有未同步tag
 
-删除本地tag：
+git tag -a <font color="red">v1.4 MD5ID</font> -m "<font color="red">my version 1.4"</font>
+git push origin v1.5 推送指定 tag
+git push origin --tags 推送所有未同步 tag
+
+删除本地 tag：
 git tag -d <font color="red">v20190514</font>
 
-删除远程tag：
+删除远程 tag：
 git push origin :refs/tags/<font color="red">v20190514</font>
 
 ##### 5、新建一个没有提交记录的分支
+
 git checkout --orphan <font color="red">source</font>
 
 ##### 6、有时候会出现汉字显示乱码
+
 git config core.quotepath false
 
 ##### 7、将本地内容和远端绑定
+
 ```
 git remote add origin ssh://git@git-ops.hismarttv.com:3333/fenggengping/aaa.git
 git push -u origin master
 ```
-这样就把本地和远端连起来了，不过第一次要拉一下，把远端和本地的commit统一起来
 
-#### 8、git rebase和git merge
+这样就把本地和远端连起来了，不过第一次要拉一下，把远端和本地的 commit 统一起来
+
+#### 8、git rebase 和 git merge
+
 就是这么用的。如果管理规范的话，都一样。
+
+#### 9、commit 时换行符问题
+
+常出问题的点是有的文件是 crlf，有的是 lf。如果提交的全都是一种，就不会有这个问题
+true: 提交时转换为 LF，检出时转换为 CRLF
+false: 提交检出均不转换
+input: 提交时转换为 LF，检出时不转换
+
+```
+# 提交时转换为LF，检出时转换为CRLF
+git config --global core.autocrlf true
+
+# 提交时转换为LF，检出时不转换
+git config --global core.autocrlf input
+
+# 提交检出均不转换
+git config --global core.autocrlf false
+```
+
+如果把 autocrlf 设置为 false 时，那另一个配置项 safecrlf 最好设置为 ture。该选项用于检查文件是否包
+
+含混合换行符，其有三个可选项：
+true: 拒绝提交包含混合换行符的文件
+false: 允许提交包含混合换行符的文件
+warn: 提交包含混合换行符的文件时给出警告
+
+```
+# 拒绝提交包含混合换行符的文件
+git config --global core.safecrlf true
+
+# 允许提交包含混合换行符的文件
+git config --global core.safecrlf false
+
+# 提交包含混合换行符的文件时给出警告
+git config --global core.safecrlf warn
+```
