--- a/日程/2021/12月工作记录.md
+++ b/日程/2021/12月工作记录.md
@@ -15,3 +15,42 @@
    最大接口数，原本设置的 1000，自动扫描后，变成 2500。改配置的时候，有个地方没有改
 2. 把所有业务的配置导入进去，盯着他们改好
 3. TDengine 预研
+
+### 12-8
+
+1. 研究 taos，总结了下内容
+2. 修了个 realtime 的 bug，gslb 的配置文件变化后，程序捕捉不到
+3. recieveAlarm 把 kafka 又加上去了，验证还是没问题
+4. 需要给海外整理 realtime 和接口监控数据
+
+### 12-9
+
+1. realtime 的 bug，搞了一上午
+   是 defer 的位置不对。defer 应该尽可能在所有需要的数据都确认正常的情况下，再加上去。而不是之前理解的，自动在 return 的时候执行。实际上，在代码执行到 defer 的时候，数据已经进行了加载，只是到 return 的时候再执行。
+2. 海外监控整理
+   token 不监控的问题确认，李钟麟把 url 直接复制上去，没有替换 token
+   realtime 接口统计，统计出了一天的数据，存邮箱草稿
+   可用性及同环比，目前看也有，falcon 里面也有数据。明天再看一下告警
+
+### 12-13
+
+1. 海外的监控搞完，监控都给加好了
+2. realtime 在 fmp 的页面替换完成，原来的预览页删掉
+
+### 12-14
+
+1. 研究了一下 victoriaMetric
+2.
+
+### 12-15
+
+1. 同环比有个 bug，改了
+2. realtime 推送失败率过高原因调查。推送到夜莺 transfer 首包时间极长，超过 10 秒，严重影响性能。迁回 openfalcon
+3. 告警接收组件，测试了几个小模块，都可以。明天直接复制过去就行了
+4.
+
+### 12-17
+
+1. 报账
+2. 研究了几个 go 处理 json 的库。全部都需要知道确切的数据结构，不然没法用
+3. 周报
