--- a/日程/2021/12月工作记录.md
+++ b/日程/2021/12月工作记录.md
@@ -54,3 +54,41 @@
 1. 报账
 2. 研究了几个 go 处理 json 的库。全部都需要知道确切的数据结构，不然没法用
 3. 周报
+
+### 12-22
+
+1. 告警接收组件，这几天做完了
+2. 给王鹏画了一个多活的面板
+
+### 12-23
+
+1. realtime 从 gslb 拉取数据的时候，存在错误。
+   本来是不存在 249 这个 ip 的，但是 realtime 这边却拿到了。增加了获取的文本原稿和解析结果的记录，看看是不是解析的问题
+2. fmp 接口部分在升级的时候，没有把 realtime_conf_tmp 表的数据替换到 realtime_conf 里面，导致业务改了一顿白改了。好在有备份，恢复回去了
+3. 支付向 receiveAlarm 发送的数据都没有找到
+   目前日志量太大了。不知道是没发过来，还是没有解析好。
+   再一个，发送的 counterType 字段的值错了，应该是 GAUGE。不知道有没有影响
+
+4. 明天要搞一下告警接收，historage 上线了，但是没有收到告警
+5. realtime 改 user-agent，还有不好用的——因为重新整了 realtime 表的数据，很可能和业务已经整理好的冲突了
+6. 双活的 grafana 面板要求：
+   选 namespace，能跟着就过滤域名、table，最好加上表
+   总的 qps 要有一条百分比的曲线——这个东西要重新算，需要再启动一个脚本：从 opentsdb 取数据，然后再算一遍
+   一个 namespace 一个折叠组
+   饼图不要了
+   每个域名下关联的 top20 接口
+
+### 12-24
+
+1. 昨天遗留问题解决
+   告警接收，因为对面发的时间戳不对，应该是秒，发了个毫秒
+   realtime 接口问题，有 5 个项目没有，下周找业务的人对一下。另外不对了，差不了多少，反正有问题肯定能监控到。下周把接口自动添加开开
+   user-agent 没有时间搞
+
+2. 新增问题：
+   谭浩的电商有接口同环比数据没有了，需要看一下。
+   双活 grafana 图，把关联请求弄好了。这样就加个百分比的曲线。
+   加百分比曲线
+   把接口的柄图弄到下面
+   给域名表增加多活字段
+   王鹏还要个 top20 接口，这个不好弄，等看看有什么办法弄弄
