--- a/第三方开源组件/kafka/相关命令.md
+++ b/第三方开源组件/kafka/相关命令.md
@@ -1,30 +1,43 @@
 ## 相关命令：
-### 启动zookeeper  
->bin/zookeeper-server-start.sh config/zookeeper.properties  
 
-kafka和zookeeper是强相关的，原生的kafka安装包自带zookeeper
+### 启动 zookeeper
 
-### 启动kafka
->bin/kafka-server-start.sh config/server.properties
+> bin/zookeeper-server-start.sh config/zookeeper.properties
 
-### 创建topic
->bin/kafka-topics.sh --create --topic quickstart-events --bootstrap-server localhost:9092
+kafka 和 zookeeper 是强相关的，原生的 kafka 安装包自带 zookeeper
 
-在实际使用中，貌似可以直接向指定topic写入数据，而不事先创建topic
+### 启动 kafka
 
-### 描述topic
->bin/kafka-topics.sh --describe --topic quickstart-events --bootstrap-server localhost:9092
+> bin/kafka-server-start.sh config/server.properties
+
+### 创建 topic
+
+> bin/kafka-topics.sh --create --topic quickstart-events --bootstrap-server localhost:9092
+
+在实际使用中，貌似可以直接向指定 topic 写入数据，而不事先创建 topic
+
+### topic 列表
+
+> bin/kafka-topics.sh --bootstrap-server localhost:9092 --list
+
+### 描述 topic
+
+> bin/kafka-topics.sh --describe --topic quickstart-events --bootstrap-server localhost:9092
 
 结果：
->Topic: quickstart-events	TopicId: FVMPHAmxSKyZUim_OyYq1w	PartitionCount: 1	ReplicationFactor: 1	Configs: segment.bytes=1073741824
-	Topic: quickstart-events	Partition: 0	Leader: 0	Replicas: 0	Isr: 0
+
+> Topic: quickstart-events TopicId: FVMPHAmxSKyZUim_OyYq1w PartitionCount: 1 ReplicationFactor: 1 Configs: segment.bytes=1073741824
+
+    Topic: quickstart-events	Partition: 0	Leader: 0	Replicas: 0	Isr: 0
 
 ### 写入数据
->bin/kafka-console-producer.sh --topic quickstart-events --bootstrap-server localhost:9092
+
+> bin/kafka-console-producer.sh --topic quickstart-events --bootstrap-server localhost:9092
 
 输入数据，回车。这就是一条数据
 
 ### 读取数据
->bin/kafka-console-consumer.sh --topic quickstart-events --from-beginning --bootstrap-server localhost:9092
+
+> bin/kafka-console-consumer.sh --topic quickstart-events --from-beginning --bootstrap-server localhost:9092
 
 从头开始读
