--- a/日程/2021/11月工作记录.md
+++ b/日程/2021/11月工作记录.md
@@ -4,6 +4,22 @@
 3. ~~falcon agent 增加开关, 关闭基础监控 11.10 @冯庚平——完成~~
 4. 梳理 falcon agent http 上报数据, 对接业务更改上报接口 11.30 @冯庚平
 5. 梳理 falcon 业务邮件组与策略, 在夜莺进行配置 11.30 @闫野 冯庚平
+
+```sql
+select s.id "strategy_id",
+       s.metric,
+       s.tags,
+       s.note,
+       t.id "template_id",
+       t.tpl_name,
+       t.action_id,
+       a.uic
+from strategy s
+         join tpl t on t.id = s.tpl_id
+         join action a on t.action_id = a.id
+where uic != 'ops,mailgroup';
+```
+
 6. ~~完成腾讯云基础监控、服务监控、容器云监控部署与告警配置 11.30 @闫野 @冯庚平~~
 7. ~~完成华为云服务监控、容器云监控部署与告警配置 11.30 @闫野 @冯庚平~~
 8. ~~完成接口监控公有云采集适配与开发 11.26 @冯庚平~~
