--- a/日程/2021/12月工作记录.md
+++ b/日程/2021/12月工作记录.md
@@ -92,3 +92,15 @@
    把接口的柄图弄到下面
    给域名表增加多活字段
    王鹏还要个 top20 接口，这个不好弄，等看看有什么办法弄弄
+
+### 12-27
+
+1. realtime 的 user-agent 搞好了。焦峰没有升级阿里云的版本，导致总有接口不好用
+2. 谭浩问题解决了。fmp 一次最多传 4000 条，接口总数已近超过 4000 了，导致总有一部分接口拿不到，自然就不会去 clickhouse 拿数据。这个问题在 idc 已经改了，阿里云给漏掉了。
+3. 在 mac 上装了个 windows，结果获取不到 IP 没法上网
+4. 王鹏要的还没有搞
+
+### 12-31
+
+1. 对着设计做就行了
+2. 画图
