--- a/日程/2022/1月份工作记录.md
+++ b/日程/2022/1月份工作记录.md
@@ -3,11 +3,13 @@
 #### 监控系统产品化能力提升
 
 1. 优化并解决 realtime 推送超时问题 1.20 @冯庚平
-2. 完成同环比配置文件自动化 1.20 @冯庚平
+2. 完成同环比配置文件自动化 1.20 @冯庚平----over
 3. 完成指标系统项目规划 1.15 @闫野 @冯庚平
 4. 完成指标系统存储后端详细设计 1.15 @闫野 @冯庚平
 5. 完成指标系统存储后端开发, 支持 tsdb 与 kafka 1.15 @冯庚平
 6. 完成指标接收组件与后端模块对接 1.30 @冯庚平
+
+7. 64.8 夜莺 v5，voctoriaMetric，telegraf。
 
 ### 1-5
 
@@ -16,3 +18,21 @@
 2. 把王鹏要的切流 grafana 面板画出来了
 3. 域名增加多活标记
 4. 接口增加统计同环比标记
+
+### 1-6
+
+1. 同环比自动生成配置测试完成，已切换
+2. realtime 解析 gslb 错误的问题。是因为重制数据字典的时候，位置错了，导致有部分循环是没有重制的，就把上个循环的数据带下来了。
+3. realtime 推送夜莺数据失败。排除夜莺的问题。应该是从阿里云服务器到 transfer 的网络有问题
+
+### 1-10 ～ 1-14
+
+1. 住院
+
+### 1-15
+
+1. 随便搞搞。在看 VictoriaMetric 集群部署方案
+
+### 1-17
+
+1. 住院
