--- a/第三方开源组件/VictoriaMetric/文档翻译.md
+++ b/第三方开源组件/VictoriaMetric/文档翻译.md
@@ -10,7 +10,28 @@
 二是通过环境变量。
 环境变量有个要注意的地方。环境变量里面的"."，要换成"\_"
 
-### 集群部署
+---
+
+# 一、VictoriaMetric
+
+## How to start VictoriaMetrics
+
+### Environment variables
+
+Each flag value can be set via environment variables according to these rules:
+
+- The <font color="red">-envflag.enable</font> flag must be set.
+- Each <font color="red">.</font> char in flag name must be substituted with <font color="red">\_</font> (for example <font color="red">-insert.maxQueueDuration \<duration></font> will translate to <font color="red">insert_maxQueueDuration=\<duration></font>).
+- For repeating flags an alternative syntax can be used by joining the different values into one using <font color="red">,</font> char as separator (for example <font color="red">-storageNode \<nodeA> -storageNode \<nodeB> will translate to storageNode=\<nodeA>,\<nodeB></font>).
+- Environment var prefix can be set via <font color="red">-envflag.prefix</font> flag. For instance, if <font color="red">-envflag.prefix=VM*</font>, then env vars must be prepended with <font color="red">VM*</font>.
+
+重点：命令行必须要有 envflag.enable，不然不认识环境变量；同一个 flag 可以多次输入，值不同会自动用逗号替换；如果定义了前缀，那每个环境变量都要有相应的前缀
+
+# 二、Cluster version
+
+![集群架构图](./集群架构图.png)
+
+## 集群部署(Cluster setup)
 
 A minimal cluster must contain the following nodes:
 
@@ -20,15 +41,19 @@ A minimal cluster must contain the following nodes:
 
 这个地方，感觉是这三个服务需要配套。一一对应的话，存储的数据是否共通，启动的时候，参数要怎么写？
 
+> 这个地方不是对应的。insert 和 select 是完全独立的两个功能不同的组件，他两个都和 storage 有关联。
+
 It is recommended to run at least two nodes for each service for high availability purposes.
 为了高可用，建议每个服务至少在 2 个 node 上运行
 An http load balancer such as vmauth or nginx must be put in front of vminsert and vmselect nodes. It must contain the following routing configs according to the url format:
 一个 http 负载均衡必须放在 vminsert 和 vmselect 的前面。必须包含一下路由：
-requests starting with <font color="red">/insert</font> must be routed to port 8480 on vminsert nodes.
-requests starting with <font color="red">/select</font> must be routed to port 8481 on vmselect nodes.
+
+- requests starting with <font color="red">/insert</font> must be routed to port <font color="red">8480</font> on <font color="red">vminsert</font> nodes.
+- requests starting with <font color="red">/select</font> must be routed to port <font color="red">8481</font> on <font color="red">vmselect</font> nodes.
+
 Ports may be altered by setting <font color="red">-httpListenAddr</font> on the corresponding nodes.
 
-#### Cluster resizing and scalability
+## Cluster resizing and scalability
 
 Cluster performance and capacity scales with adding new nodes.
 
@@ -47,7 +72,7 @@ Steps to add <font color="red">vmstorage</font> node:
 3. Gradually restart all the <font color="red">vminsert</font> nodes with new <font color="red">-storageNode</font> arg containing <font color="red"><new_vmstorage_host></font>.
    随意重启 vminsert，要带上-storageNode 这个参数，并把新的 vmstorage node 加上
 
-### Cluster availability
+## Cluster availability
 
 HTTP load balancer must stop routing requests to unavailable <font color="red">vminsert</font> and <font color="red">vmselect</font> nodes.
 http 负载均衡器必须停止到到不可用 vminsert 和 vmselect 节点的路由
@@ -57,14 +82,14 @@ The cluster remains available if at least a single vmstorage node exists:
 1. vminsert re-routes incoming data from unavailable vmstorage nodes to healthy vmstorage nodes
    vminsert 会把进来的数据从不可用 vmstorage 重新路由到健康的节点
 2. vmselect continues serving partial responses if at least a single vmstorage node is available. If consistency over availability is preferred, then either pass -search.denyPartialResponse command-line flag to vmselect or pass deny_partial_response=1 query arg in requests to vmselect.
-   如有有一个 vmstorage 节点是可用的，vmselect 会继续提供部分响应。如果数据一致性要求大于可用性，则可以加上参数<font color="red">-search.denyPartiaResponse</font>，或者在请求参数里面加上<font color="red">deny_partial_response=1</font>
+   如有有一个 vmstorage 节点是可用的，vmselect 会继续提供部分响应。如果数据一致性要求大于可用性，则可以加上参数<font color="red">-search.denyPartialResponse</font>，或者在请求参数里面加上<font color="red">deny_partial_response=1</font>
 
 vmselect doesn't serve partial responses for API handlers returning raw datapoints - /api/v1/export\* endpoints, since users usually expect this data is always complete.
 
 Data replication can be used for increasing storage durability. See these docs for details.
 数据备份可用于不断增长的存储耐久。(我估计就是考虑磁盘坏了)
 
-#### Replication and data safety
+## Replication and data safety
 
 By default VictoriaMetrics offloads replication to the underlying storage pointed by -storageDataPath.
 VictoriaMetric 把备份转嫁到下层的标记了<font color="red">-strorageDataPath</font>的存储上。
@@ -75,10 +100,55 @@ VictoriaMetric 把备份转嫁到下层的标记了<font color="red">-strorageDa
 
 > When the replication is enabled, -dedup.minScrapeInterval=1ms command-line flag must be passed to vmselect nodes. Optional -replicationFactor=N command-line flag can be passed to vmselect for improving query performance when up to N-1 vmstorage nodes respond slowly and/or temporarily unavailable, since vmselect doesn't wait for responses from up to N-1 vmstorage nodes. Sometimes -replicationFactor at vmselect nodes can result in partial responses. See this issues for details. The -dedup.minScrapeInterval=1ms de-duplicates replicated data during queries. If duplicate data is pushed to VictoriaMetrics from identically configured vmagent instances or Prometheus instances, then the -dedup.minScrapeInterval must be set to bigger values according to deduplication docs.
 
-当备份被启用的时候，<font color="red">-dedup.minScrapelnteval=1ms</font>这个参数必须传给 vmselect 节点。当多达 N-1 个 vmstorage 节点相应慢或者暂时不可用，<font color="red">-replicationsFactor=N</font>可以传给 vmselect，来提高请求性能。应为 vmselect 不会等待从 N-1 个 vmstorage 节点来的响应。有时候，在 vmselect 节点的<font color="red">-replicationFactor</font>参数，会导致不完整的响应。具体原因再翻译。后面的就彻底没看明白。
+当备份被启用的时候，<font color="red">-dedup.minScrapelnteval=1ms</font>这个参数必须传给 vmselect 节点。当多达 N-1 个 vmstorage 节点相应慢或者暂时不可用，<font color="red">-replicationFactor=N</font>可以传给 vmselect，来提高请求性能。应为 vmselect 不会等待从 N-1 个 vmstorage 节点来的响应。有时候，在 vmselect 节点的<font color="red">-replicationFactor</font>参数，会导致不完整的响应。具体原因再翻译。后面的就彻底没看明白。
 Note that replication doesn't save from disaster, so it is recommended performing regular backups. See these docs for details.
 
 > Note that the replication increases resource usage - CPU, RAM, disk space, network bandwidth - by up to -replicationFactor times. So it may be worth offloading the replication to underlying storage pointed by -storageDataPath such as Google Compute Engine persistent disk, which is protected from data loss and data corruption. It also provide consistently high performance and may be resized without downtime. HDD-based persistent disks should be enough for the majority of use cases.
 
 就是可以使用网络硬盘
 It is recommended using durable replicated persistent volumes in Kubernetes.
+
+## Backups
+
+It is recommended performing periodical backups from instant snapshots for protecting from user errors such as accidental data deletion.
+
+The following steps must be performed for each vmstorage node for creating a backup:
+
+1. Create an instant snapshot by navigating to /snapshot/create HTTP handler. It will create snapshot and return its name.
+2. Archive the created snapshot from <-storageDataPath>/snapshots/<snapshot_name> folder using vmbackup. The archival process doesn't interfere with vmstorage work, so it may be performed at any suitable time.
+3. Delete unused snapshots via /snapshot/delete?snapshot=<snapshot_name> or /snapshot/delete_all in order to free up occupied storage space.
+
+There is no need in synchronizing backups among all the vmstorage nodes.
+
+Restoring from backup:
+
+1. Stop vmstorage node with kill -INT.
+2. Restore data from backup using <a href="#vmrestore">vmrestore</a> into -storageDataPath directory.
+3. Start vmstorage node.
+
+# 七、<h id="vmrestore">vmrestore</h>
+
+vmrestore restores data from backups created by vmbackup. VictoriaMetrics v1.29.0 and newer versions must be used for working with the restored data.
+
+Restore process can be interrupted at any time. It is automatically resumed from the interruption point when restarting vmrestore with the same args.
+
+## Usage
+
+VictoriaMetrics must be stopped during the restore process.
+
+```shell
+vmrestore -src=gs://<bucket>/<path/to/backup> -storageDataPath=<local/path/to/restore>
+```
+
+- <font color="red">\<bucket></font> is GCS bucket name.
+- <font color="red"><path/to/backup></font> is the path to backup made with vmbackup on GCS bucket.
+- <font color="red"><local/path/to/restore></font> is the path to folder where data will be restored. This folder must be passed to VictoriaMetrics in <font color="red">-storageDataPath</font> command-line flag after the restore process is complete.
+
+The original -storageDataPath directory may contain old files. They will be substituted by the files from backup, i.e. the end result would be similar to rsync –delete.
+恢复数据的时候需要指定恢复的位置，原位置可能会有旧文件干扰，最好都干掉。
+
+## Troubleshooting
+
+- If vmrestore eats all the network bandwidth, then set <font color="red">-maxBytesPerSecond</font> to the desired value.
+  恢复的时候可以限速。毕竟从别的节点传数据
+- If vmrestore has been interrupted due to temporary error, then just restart it with the same args. It will resume the restore process.
