--- a/日程/2022/2月份工作记录.md
+++ b/日程/2022/2月份工作记录.md
@@ -21,3 +21,44 @@
 2. 把 jetbrains 全家桶的破解做了
 3. 找到一个 mac 软件破解网站——TNT。就目前下载的几个软件，都用不了
 4. 把告警接收和 sql 监控的 SDS 写了
+
+### 2-8
+
+1. sql 监控前后端框架弄好
+2. 明天要把添加监控页做出来
+   今天做到 database 的数据展示。访问 cmdb 的 mysql 接口，就能拿到绝大部份数据，通过选 ip，直接把相关信息关联展示出来就好。
+   后端只要记住 ip、端口、用户名、密码即可，用户名和密码通过后台再拿一次
+
+### 2-10
+
+1. sql 监控前后端都完成。
+2. 明天要搞同步，即在夜莺上把监控策略加上。似乎比较麻烦
+3. 下一步就是搞个接口执行具体语句
+
+### 2-18
+
+这一周干了两件事情
+
+1. receiveAlarm 对接靳伟康的组件
+   他写 metric 日志，fliebeat 推送到 kafka，receiveAlarm 从 kafka 读取。年前基本完成，这次又调试了一下。
+2. fmp 告警发送，对接信鸿。
+   给重构了，该抽象抽象，该加功能加功能。现在可以在前端手动配置，且可以配置多个发送目标(钉钉，信鸿)
+
+### 2-21
+
+1. 继续做 sql 监控
+2. sql 监控需要测试一下修改功能，然后做启动接口，来获取策略执行监控语句，然后写 opentsdb 或者夜莺
+3. receiveAlarm 内存泄漏改好，gin500 错误改好。
+   内存是因为定义了一个列表，每次循环没有清空，导致越来越大。内存受不了，opentsdb 接收也受不了
+
+### 2-22
+
+1. api_calculate_ckh 阿里云没有数据
+   之前调试，导致只有一个表的数据会被搜集。
+   更新了阿里云的代码，修改了日志中 clickhouse 表不存在时打印的 log，这部分属于正常现象，挑出来跳过不打印。
+   给每天的接口更新加上定时任务
+
+2. sql 数据监控全部做完
+   数据上报的全部
+   前端配置的调整
+   监控添加看起来是正常了，明天上线调一下
