--- a/业务/recieveAlarm/运维指标系统.md
+++ b/业务/recieveAlarm/运维指标系统.md
@@ -127,35 +127,35 @@ WW <---> SMQ
 
 #### 1、http 接口
 
-api：/warningInfo、/v1/push
-port：1988、8080
+api：/v1/push
+port：1988
 可以混用
 method：POST
 body：json 数组 [serviceInfo1, serviceInfo2...]
 请求样例：<font color="red">body 是个数组</font>
 
 ```json
-[{
-  "metric": "lvs_status",
-  "endpoint": "superapp-launcher-njbp-api",
-  "timestamp":  1234567890,   时间戳单位：秒
-  "step": 60,
-  "value": 1.22,
-  "counterType": "GAUGE",
-  "tags": {"a":1, "b":2, "c":3}
-}]
+[
+  {
+    "metric": "lvs_status",
+    "endpoint": "superapp-launcher-njbp-api",
+    "timestamp":  1234567890,   时间戳单位：秒
+    "value": 1.22,
+    "counterType": "GAUGE",
+    "tags": {"a":1, "b":2, "c":3}
+  }
+]
 ```
 
 字段说明：
-1、 `metric` 必填，长度小于 128, 仅限这些字符，[a-z0-9A-Z-_.]
+1、 `metric` 必填，长度小于 128, **仅限这些字符**，[a-z0-9A-Z_]，起始字符不支持数字
 2、 `endpoint` 必填, 填写租户项目，先到运维注册；
-3、`CounterType`，默认 GAUGE。可选值：GAUGE | COUNTER | SUBTRACT | DERIVE
-4、`Step` 要大于 0，或者不写。原 falcon 判断上报间隔用，此仅为兼容。
-5、`Tags` 长度不超过 512，key 数量不超过 20 个。兼容 falcon，既可以是 a=1,b=2 的字符串，也可以是字典{"a":1, "b":2, "c":3}
-6、时间戳不能超过当前时间 5 分钟；可以小于当前时间，且没有时长限制。即，数据不能来自未来
-7、`value` 仅限数字，即整型、浮点
+3、`counterType`，默认 GAUGE。可选值：GAUGE | COUNTER
+4、`tags` 长度不超过 512，key 数量不超过 20 个。兼容 falcon，既可以是 a=1,b=2 的字符串，也可以是字典{"a":1, "b":2, "c":3}。key 起名要求同 metric： **仅限这些字符**，[a-z0-9A-Z_]，起始字符不支持数字；value 为 unicode
+5、时间戳不能超过当前时间 5 分钟；可以小于当前时间，且没有时长限制。即，数据不能来自未来
+6、`value` 仅限数字，即整型、浮点
 
-返回值就是字符串，没有数据结构。
+返回值就是字符串。成功："推送成功"；失败：返回失败原因
 返回是否正常，看状态码。非`200`全异常
 
 #### 2、kafka 读取
