n9e-v5部署方案、步骤

--- a/业务/夜莺v5+victoriaMetric/部署方案及问题.md
+++ b/业务/夜莺v5+victoriaMetric/部署方案及问题.md
@@ -4,35 +4,45 @@
 
 ```mermaid
 flowchart TD
-A(telegraph)
+A(telegraf)
+B(telegraf)
 subgraph web [画图界面]
 G(Grafana)
 N(夜莺web)
 end
 subgraph sg_nginx [负载均衡]
-NGINX(nginx)
+NGINX(nginx1)
+NGINX1(...)
+NGINXN(nginxN)
 end
 subgraph sg_n9e [夜莺server]
 N9E(server1)
+N9E1(...)
+N9EN(serverN)
 end
-subgraph sg_victoria [存储部分]
+subgraph sg_storage [存储部分]
 S1(storate1)
-S2(storate2)
-S3(storate3)
+S2(...)
+S3(storateN)
 end
 subgraph sg_read [读取数据]
 I1(insert1)
-I2(insert2)
-I3(insert3)
+I2(...)
+I3(insertN)
 end
 subgraph sg_write [写入数据]
 W1(write1)
-W2(write2)
-W3(write3)
+W2(...)
+W3(writeN)
 end
-web-->sg_nginx-->sg_read-->sg_victoria
-A-->sg_n9e-->sg_write-->sg_victoria
-sg_n9e-->sg_read-->sg_victoria
+subgraph sg_victoria [VictoriaMetric]
+sg_read
+sg_write
+sg_storage
+end
+web--读取数据-->sg_nginx-->sg_read-->sg_storage
+A--写入数据-->sg_n9e-->sg_write-->sg_storage
+B--写入数据-->sg_n9e
 ```
 
 说明：
@@ -71,3 +81,28 @@ insert、select、nginx、n9e-v5-server、n9e-v5-webapi
    问题不大。
 3. storage 入云
    如果要入云，就得解决第一章的两个问题。
+
+## 四、部署图
+
+```mermaid
+flowchart TD
+AGENT
+subgraph sg_n9e [夜莺v5-云内]
+WEBAPI[webapi\n从cmdb的nginx通过域名进来\nn9e-v5.hismarttv.com\nip:123.103.124.101\nport:18000]
+SERVER[server\nvip1:192.168.30.145\nvip2:123.103.124.204\nport:19000]
+end
+subgraph sg_nginx [victoriaMetric-nginx-云内]
+NGINX[nginx\nvip:192.168.13.195\nport:80]
+end
+subgraph sg_victoriaMetric [victoriaMetric-云内]
+INSERT[insert\nport:8480]
+SELECT[select\nport:8481]
+end
+subgraph sg_storage [存储部分-云外]
+S1[storate1\nIP:192.168.52.210\ninsert port:8400\nselect port:8401]
+S2[storate2\nIP:192.168.52.211\ninsert port:8400\nselect port:8401]
+S3[storate3\nIP:192.168.52.212\ninsert port:8400\nselect port:8401]
+end
+AGENT-->SERVER
+sg_n9e-->sg_nginx-->sg_victoriaMetric-->sg_storage
+```
