--- a/日程/2022/2月份工作记录.md
+++ b/日程/2022/2月份工作记录.md
@@ -1,16 +1,16 @@
 ### 任务书：
 
-1. 告警监控通道：实现告警通道对接信鸿，namespace 维度拆分告警发送给各 devops 团队
-   就是 fmp 那一套对接一下信鸿
-2. SE 工作界面整合：实现 SE 执行变更管理的工作界面可视化和整合，变更执行记录巡检，日志、业务数据查询等
-   目前看只需要把巡检工作界面挪到 task 即可
+1. ~~告警监控通道：实现告警通道对接信鸿，namespace 维度拆分告警发送给各 devops 团队
+   就是 fmp 那一套对接一下信鸿~~
+2. ~~SE 工作界面整合：实现 SE 执行变更管理的工作界面可视化和整合，变更执行记录巡检，日志、业务数据查询等
+   目前看只需要把巡检工作界面挪到 task 即可~~
 3. 完成 fmp 事件模型写入 clickhouse
    原来是些数据库，现在这个数据量太大了，增加一个写到 clickhouse 的逻辑。clickhouse 有 django_model，可以直接用
-4. 支持给定特定 SQL(SQL 返回值为 int 或 flout)，将结果推送到夜莺
-   谭浩要的 sql 监控
-5. 指标系统后端夜莺与 tsdb 搭建与测试与上线
+4. ~~支持给定特定 SQL(SQL 返回值为 int 或 flout)，将结果推送到夜莺
+   谭浩要的 sql 监控~~
+5. ~~指标系统后端夜莺与 tsdb 搭建与测试与上线
    已经弄好，只要入云就可以了
-   等王鹏一起看一下方案，再搞
+   等王鹏一起看一下方案，再搞~~
 6. 指标系统查询与配置文档编写
    抽空写写
 
@@ -62,3 +62,21 @@
    数据上报的全部
    前端配置的调整
    监控添加看起来是正常了，明天上线调一下
+
+### 2-23
+
+1. sql 查询上线了
+   问题是密码获取不到，老是**\***，这就没法用了
+2. 明天要继续测是监控添加和数据获取
+
+### 2-24
+
+1. sql 数据监控都搞好了。可以先用起来
+2. 接口统计出现了个问题
+   本来是统计前 10000 接口，这里面会有一些 restful 接口，现在这种接口很多，把其余量相对较小的接口给冲掉了。现在在 clickhouse 获取的地方加上过滤，把 restful 接口直接过滤掉
+
+### 2-25
+
+1. 昨天下午 4 点开始到 7 点没有告警，王鹏让查。怀疑是上版本上错了。其实就是没有告警
+2. 焦峰要配一下错误码和响应时间的告警
+3. 看一下 django-clickhouse，fmp 上把量大的数据像是
