--- a/git/常用命令.md
+++ b/git/常用命令.md
@@ -83,3 +83,12 @@ git config --global core.safecrlf false
 # 提交包含混合换行符的文件时给出警告
 git config --global core.safecrlf warn
 ```
+
+#### 10、换行符导致系统认为变化的问题
+先把9设置好
+然后
+```
+git rm --cached -r .
+git reset --hard
+```
+搞定
