--- a/业务/夜莺v5+victoriaMetric/部署步骤.md
+++ b/业务/夜莺v5+victoriaMetric/部署步骤.md
@@ -63,6 +63,7 @@ sg_n9e--告警判断时-->sg_read
 CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o n9e ./src
 ```
 
+需要mysql和redis
 ##### server
 
 Dockerfile
