--- a/日程/2022/3月份工作记录.md
+++ b/日程/2022/3月份工作记录.md
@@ -5,7 +5,7 @@
 3. ~~完成夜莺 V5 指标双写 Kafka 功能~~
 4. 完成容器中间件集中监控监控大盘设计
 5. 按照资源池划分来监控 IDC JuCloud 资源使用率
-6. 月度 KPI 指标前端展示，支持自主导出错误码详情和汇总
+6. ~~月度 KPI 指标前端展示，支持自主导出错误码详情和汇总~~
 7. sql 工具包功能需求调研
 8. 完成 sql 工具包功能设计
 
@@ -20,3 +20,13 @@
 3. 流程图画完
 4. 下周回来要看数据库查询无法添加 codis 问题，报错是 password 字段不对
    再个是资源池的添加接口也不能用，这个直接重做得了
+
+### 3-9
+
+1. 周一在改bug。cmdb资源池无法创建的问题。是因为目前node数量多了，超过字段长度
+李金明大数据没有数据，给搞了一下
+谭浩sql没有返回结果，搞了一下
+2. 周二在修电脑
+3. 今天修了半天电脑。把李永福的需求做完了。
+简单，只查询简单多了。
+明天可以考虑做一个导出工具，甚至可以在当前基础上增加一个字段，用来填写原因分析。不过权限不好控制
