--- a/日程/2022/3月份工作记录.md
+++ b/日程/2022/3月份工作记录.md
@@ -3,7 +3,7 @@
 1. ~~完成夜莺 V5 指标系统上线与使用文档编写~~
 2. ~~完成夜莺 V5 VictoriaMetric 正式数据库部署~~
 3. ~~完成夜莺 V5 指标双写 Kafka 功能~~
-4. 完成容器中间件集中监控监控大盘设计
+4. ~~完成容器中间件集中监控监控大盘设计~~
 5. 按照资源池划分来监控 IDC JuCloud 资源使用率
 6. ~~月度 KPI 指标前端展示，支持自主导出错误码详情和汇总~~
 7. sql 工具包功能需求调研
