--- a/日程/2022/3月份工作记录.md
+++ b/日程/2022/3月份工作记录.md
@@ -30,3 +30,44 @@
 3. 今天修了半天电脑。把李永福的需求做完了。
 简单，只查询简单多了。
 明天可以考虑做一个导出工具，甚至可以在当前基础上增加一个字段，用来填写原因分析。不过权限不好控制
+
+### 3-11
+
+1. 中间件集中监控的大盘画好了
+2. 研究了一下yearning
+
+### 3-15
+
+1. 数据查询工具需要添加阿里云的支持
+  阿里云都可以看做是codis类型，即只有一个vip
+  但是上传类型的时候，需要把原本的类型带上，例如mysql、redis之类
+  cmdb_id这个值要重新看一下，各个实例应该是cmdb的不同表，这个Id很可能重复
+  需要在group表增加一个字段，表示IDC和非IDC，非IDC都看作是公有云，只有一个访问地址
+  
+
+### 3-16:
+
+1. 公有云接口
+/publiccloud/aliyun/ecs
+/publiccloud/aliyun/rds
+/publiccloud/aliyun/redis
+
+### 3-17
+
+1. 数据库数据查询增加公有云基本完成
+明天需要再把全流程测一遍。关联的东西太多
+明天把instance表的dc字段去掉，这个没用了
+确认没问题，就把代码注释的部分去掉
+前端把注释加一下。抽象了一个函数，但是兼容性不好，主要是字段的名字，还有值的来源都不一样，虽然逻辑一样，处理起来基本就是两回事
+2. 当前qps小于1000，且非小流量接口，加currentqpssmall=true。其余的不加tag
+
+### 3-21
+
+1. sql查询支持公有云，目前只做了阿里云，而且pgsql还不支持。主要是添加、同步、查询都需要增加一个类型，这个类型在cmdb里面却没有单独拉出来，和mysql混到一起了。很麻烦
+2. sql查询用到了django_q，版本号要定死。高版本数据库字段有变化，用不了。
+
+### 3-22
+
+1. fmp接口表增加一个字段，针对接口是否告警。default设为告警，然后手动改。这样采集就不用动。
+2. 接口数据采集也跟着修改，上次加的标志去掉，换成现在的
+3. fmp中clickhouse表的编辑功能不好用。前端代码调用函数的时候，调用到机房的函数了。估计是复制的时候没有改全
