--- a/业务/sql工具包/使用场景.md
+++ b/业务/sql工具包/使用场景.md
@@ -29,13 +29,97 @@ START-->AUDIT-->EXECUTE
 
 ## 二、问题
 
-### 2.1 tar 包内文件内容定义
+### 2.1 上传文件类型
+
+规定死是 tar 包？还是未压缩的原文件？
+
+### 2.2 tar 包内文件内容定义
 
 当前使用形式：
 当前 tar 包至少有两个文件，一个是 sql 内容，一个是执行脚本。sql 文件至少一个，即完全可能出现多个 sql 文件，这里就有顺序的问题。
 要求，sql 文件必须要在文件名上标注序号——"[0-9][0-9]\_"
 去掉执行脚本，或者程序自动忽略。程序只去找数字开头的文件。
 
-### 2.2 sql 语句的展示
+### 2.3 上传的文件是否要保留
 
-在审核阶段，审核人是否要看到
+这个工具包在 svn 上都有，保留的意义在于追溯是否上传错了。之前手动操作的时候，没有明确规范
+
+### 2.4 sql 语句的展示
+
+在审核阶段，审核人是否要看到全部的 sql？
+sql 工具包内的 sql 语句数量不定，可能只有一句，可能有一堆。要如何定夺
+
+### 2.5 加邮件通知
+
+### 2.6 审核组
+
+devops 组提交
+单独拉一个审核组
+可以指定下一步审核人
+
+### 2.7 审核流程
+
+开发提交-->开发领导审核-->测试审核-->测试领导审核-->运维负责人审核-->运维领导审核-->按时执行
+这个流程太长了
+
+### 2.8 审核输入
+
+目前 sql 审核只能一句一句审核。
+如果一次有多条 sql，只能一条一个结论
+
+## 三、页面
+
+### 3.1 工单展示页面
+
+仅展示相关工单
+
+### 3.2. 工单提交页面
+
+#### 3.2.1 选择数据库
+
+#### 3.2.2 上传 sql 包
+
+一个工具包可能有多个 tar 包，
+一个 tar 包里面可能有多个 sql 文件，
+一个 sql 文件里面可能有多条 sql
+
+#### 3.2.3 指定审核人员
+
+运维审核部分可以直接根据项目责任人来指定运维审核人员
+前面开发、测试的不行。
+
+#### 3.2.4 指定执行时间
+
+定时任务扫描，超过预定时间就执行。
+这样执行时间是一组固定时间点，并非指定的时间。
+
+### 3.3. 工单审核页面
+
+#### 3.3.1 sql 展示
+
+目标数据库、sql 语句、审核结果
+
+#### 3.3.2 审核按钮
+
+必须点了审核，才能到下一步
+审核目前没有确定的内容，都是人家做好的
+
+#### 3.3.3 驳回按钮
+
+#### 3.3.4 废弃按钮
+
+## 四、部分逻辑
+
+### 4.1 审核
+
+定义 assigned 和 relevant 两个字段，assigned 为当前操作人、relevant 为相关人员。
+relevant 会包含 assigned
+审核为串行，驳回和废弃通过 status 字段的值来判定。当前所处步骤也通过 status 来判定
+
+### 4.2 审核模板
+
+固化下来，通过预置的形式写死，不允许自己配置
+
+### 4.3 执行结果
+
+异步处理。前端标记状态，后台执行，执行完成后修改标志位，前端查看。
