--- a/日程/2022/3月份工作记录.md
+++ b/日程/2022/3月份工作记录.md
@@ -81,3 +81,20 @@
    增加发送数据数量的日志。有点多，最好是能做成定时记录的形式
 5. 容器云内夜莺 v5 版本升级——估计闫野之前做好了
    把闫野做的新镜像替换好，之前是一个镜像通过不同的启动命令来实现是前端还是后端
+
+### 3-28
+
+1. sql 工具包设计文档
+2. 前端开始做
+   选择器那里设计成选择好后，直接生效
+
+### 3-29
+
+1. 搞明白 sql 审核的逻辑
+   是用了第三方的服务，github 上有开源。线上要自己启动一个
+   上次做的时候，没有移植审核部分。这次要全搞过来。需要加一个 workflow 的表记录 sql 执行结果。也就是说，要移植两部分：一是执行的逻辑，二是回滚的逻辑
+
+### 3-31
+
+1. 测试 goInception 的使用
+2. 给林向荣搞预上线的镜像。主要是正式环境和预上线环境的 harbor 没有配置安全策略，它俩就不通。所以只能从 IDC 把镜像打包下载，然后 scp 到预上线，push 上去
