--- a/第三方开源组件/VictoriaMetric/实际使用.md
+++ b/第三方开源组件/VictoriaMetric/实际使用.md
@@ -48,7 +48,7 @@ nohup ./vminsert-prod -storageNode=127.0.0.1:8400 -replicationFactor=1 -opentsdb
 echo "start insert"
 ;;
 "storage")
-nohup ./vmstorage-prod -retentionPeriod=30d > logs/storage.output &
+nohup ./vmstorage-prod -retentionPeriod=30d -storageDataPath=/data/victoriaMetric > logs/storage.output &
 echo "start storage"
 ;;
 *)
